testdata/invalid/internal/domain/user/cross_import.go
package user

import _ "github.com/kimtaeyun/testproject-invalid/internal/domain/order"

func Cross() {}
